src/App.css
.App {
  text-align: center;
  width: 100%;
  color: white;
  font-size: large;
}

.App-header {
  padding: 40px;
}

.App-title {
  font-size: 2.5em;
}

.App-intro {
  padding-bottom: 30px;
}

.App-main {
  width: 100%;
}

.ScoreTable-main {
  padding-top: 40px;
}

.Loader {
  margin-left: auto;
  margin-right: auto;
  width: 100px;
}

.DropDown {
  width: 350px;
  margin-left: auto;
  margin-right: auto;
}

.dropdown-menu {
  height: 300px;
  overflow-y: scroll;
}

.error {
  color: red;
  width: 100%;
  text-align: center;
}

.table-striped > tbody > tr:nth-child(2n + 1) > td,
.table-striped > tbody > tr:nth-child(2n + 1) > th {
  background-color: #5bc0de;
}

